methods.picture.PictureMono3.scala.error
Compilation error:
PictureMono3:21: error: '=' expected but identifier found.
def faire Motif2(){
          ^PictureMono3:46: error: illegal start of simple expression
def faireMotif(){
^